--- a/CPP_module01/ex04/Makefile
+++ b/CPP_module01/ex04/Makefile
@@ -6,7 +6,7 @@
 #    By: yfontene <yfontene@student.42porto>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/23 13:15:17 by yfontene          #+#    #+#              #
-#    Updated: 2024/11/18 19:28:06 by yfontene         ###   ########.fr        #
+#    Updated: 2024/11/20 09:59:28 by yfontene         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,12 +18,13 @@ CYAN				=	\033[0;36m
 END					=	\033[0m
 
 
-NAME = printBrain
+NAME = replace
 CC = c++
 CFLAGS = -Wall -Werror -Wextra -std=c++98
 RM = rm -f
 
-SRCS=					main.cpp\
+SRCS=					FileProcessor.cpp\
+						main.cpp\
 						
 OBJS=					$(SRCS:.cpp=.o)
 
