--- a/CPP_module07/ex02/Makefile
+++ b/CPP_module07/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: yfontene <yfontene@student.42porto>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/23 13:15:17 by yfontene          #+#    #+#              #
-#    Updated: 2025/01/22 16:17:59 by yfontene         ###   ########.fr        #
+#    Updated: 2025/01/22 16:18:17 by yfontene         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,7 @@ CYAN				=	\033[0;36m
 END					=	\033[0m
 
 
-NAME = iter
+NAME = array
 CC = c++
 CFLAGS = -Wall -Werror -Wextra -std=c++98
 RM = rm -f
